<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="viewModel"
            type="com.example.worldskillsbank.presentation.viewmodels.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sign_in_fragment_bg">

        <LinearLayout
            android:id="@+id/logoLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:src="@drawable/museum" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/logo_text"
                android:textColor="#8a68b5"
                android:textSize="30sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/atmsButton"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/sign_in_fragment_button_bg_ripple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoLayout">

            <ImageView
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:layout_marginEnd="32dp"
                android:src="@drawable/pin"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atms_button_label"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ratesButton"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/sign_in_fragment_button_bg_ripple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/atmsButton">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/exchange_dollar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/rates"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/currentDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif"
                android:text="@{viewModel.currentDate}"
                android:textColor="@color/gray"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginBottom="12dp"
                android:text="@string/usd"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/currentUsdTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="sans-serif"
                android:text="@{viewModel.currentUsdRate}"
                android:textColor="@color/gray"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="12dp"
                android:text="@string/eur"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/currentEurTextView" />

            <TextView
                android:id="@+id/currentEurTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="42dp"
                android:fontFamily="sans-serif"
                android:text="@{viewModel.currentEuroRate}"
                android:textColor="@color/gray"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/sign_in_button_bg_ripple"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/log_in"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratesButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>